add thread and signals test code

--- a/SumUpQt/SumUpQt.vcxproj.filters
+++ b/SumUpQt/SumUpQt.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QtTest\hw_widget_0124.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QtTest\hw_widget_0124.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
 </Project>
